# pwsh-native-host

./: .gitignore  CMakeLists.txt  README.md  main.c
DotNetLib/: DotNetLib.csproj  Lib.cs
NativeHelper/: Bindings.cs
NativeHost/: Bindings.cs
native-host/: CMakeLists.txt  main.c
